# todo-app

./: .env.example  .flake8  .gitignore  .pre-commit-config.old  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
docker/: app.yaml  storages.yaml
frontend/: index.html
frontend/scripts/: index.js
src/: .env.example  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
src/alembic/: env.py
src/alembic/versions/: 2024_07_12_1725-7e731d51807c_initial_migration.py  4d41b473d08a_.py  63cad83fcd81_.py  84be4a782dd0_.py  a7d9d91d4710_created_at_users_table.py  c68dd7883249_.py  d68d6526d053_.py  e8295652504d_.py  f3656699ed19_added_users_table.py
src/api/v1/: __init__.py  schemas.py
src/api/v1/todo/: exceptions.py  router.py
src/api/v1/todos/: exceptions.py  router.py
src/api/v1/users/: router.py
src/core/: database.py
src/core/todo/: entities.py  repository.py  schemas.py  service.py
src/core/todos/: entities.py  models.py  repository.py  schemas.py  service.py
src/core/users/: entities.py  exceptions.py  models.py  repository.py  schemas.py  service.py  utils.py
src/todo/: entities.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  dependencies.py
tests/api_tests/: test_auth.py  test_todos.py
tests/factories/: todos.py
tests/unit_tests/: test_todos.py
